styles.css
/* ... */
#ballot-box {
  margin-top: 60px;
}

@media screen and (max-width: 1386px) {
  #about-section {
    max-width: 100%;
    width: 400px !important;
  }
}

@media screen and (max-width: 1094px) {
  #about-section {
    width: auto !important;
  }
}

@media screen and (max-width: 1094px) and (min-width: 601px) {
  #about-section {
    margin-top: 81px !important;
  }
}

@media screen and (max-width: 600px) {
  #about-section {
    margin-top: 44px !important;
  }
}

#about-section {
  margin-top: 96px;
  width: 495px;
}

#half-break1 {
  margin-top: 11px;
  visibility: hidden;
}

#half-break2 {
  margin-top: 14px;
  visibility: hidden;
}

.btn {
  padding: 14px 24px !important;
  font-size: 16px !important;
  line-height: 18px !important;
  font-weight: 600 !important;
}

.btn-register {
  all: unset;
  border-color: #28a745 !important;
  background-color: #e6f2ec !important;
  box-shadow: 4px 4px 0px 0px #bdccc4;
  border: 1px solid #28a745 !important;
  box-shadow: 4px 4px 0px #bdccc4 !important;
  border-radius: 16px !important;
  color: #107c46 !important;
  font-style: normal !important;
  font-weight: 600 !important;
  letter-spacing: 0.02em !important;
  width: 100%;
}

.btn-register-desktop {
  padding: 25px 0px !important;
  font-size: 20px !important;
  line-height: 24px !important;
}

@media screen and (max-width: 1094px) and (min-width: 601px) {
  .btn-register-mobile {
    padding: 25px 0px !important;
    font-size: 20px !important;
    line-height: 24px !important;
  }
}

@media screen and (max-width: 600px) {
  .btn-register-mobile {
    padding: 12px 0px !important;
    font-size: 18px !important;
    line-height: 22px !important;
  }
}

.alert-success {
  margin-bottom: 0 !important;
}

.btn-success {
  background-color: #28a745 !important;
  border-color: #28a745 !important;
  border-color: #28a745 !important;
  text-align: left !important;
}

.btn-outline-success {
  --bs-btn-color: #28a745 !important;
  --bs-btn-border-color: #28a745 !important;
  --bs-btn-hover-color: #fff;
  --bs-btn-hover-bg: #28a745 !important;
  --bs-btn-hover-border-color: #28a745 !important;
  --bs-btn-focus-shadow-rgb: 25, 135, 84;
  --bs-btn-active-color: #fff;
  --bs-btn-active-bg: #28a745 !important;
  --bs-btn-active-border-color: #28a745 !important;
  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
  --bs-btn-disabled-color: #28a745 !important;
  --bs-btn-disabled-bg: transparent;
  --bs-btn-disabled-border-color: #28a745 !important;
  --bs-gradient: none;
}

#form-section {
  /* background-color: #f9d9dc; */
  background-image: url('assets/Pink\ background.jpg');
  /* height: 1160px; */
  padding-bottom: 160px;
  background-color: #f9d9dc;
  background-position: center;
  background-repeat: no-repeat;
  max-height: 1081px;
}

#form-section-title {
  white-space: nowrap;
  font-style: normal;
  font-weight: 700;
  font-size: 58px;
  line-height: 70px;
  padding-top: 55px;
  padding-bottom: 55px;
  align-items: center;
  text-align: center;
}

@media screen and (max-width: 600px) {
  #form-section-title {
    word-wrap: break-word !important;
    white-space: normal !important;
    /* font-size: 28px !important; */
    padding-top: 3vh !important;
    padding-bottom: 3vh !important;
    padding-left: 4vh !important;
    padding-right: 4vh !important;
  }
  #polling-form {
    border-right: none !important;
    border-left: none !important;
  }

  #form-section {
    padding-bottom: 8rem !important;
  }

  #footer {
    width: 85% !important;
  }
}

@media screen and (max-width: 818px) {
  #form-section-title {
    white-space: wrap !important;
    font-size: 7vw !important;
    padding-top: 4vh !important;
    padding-bottom: 4vh !important;
  }
  #polling-form {
    width: 100vw !important;
    border-right: none !important;
    border-left: none !important;
  }
}

#polling-form {
  min-height: 380px;
  box-shadow: 0px 4px 0px 0px #00000040;
  background-color: white;
  margin: auto;
  padding-left: 55px;
  padding-right: 55px;
  padding-top: 38px;
  padding-bottom: 55px;
  border: 1px solid #000000;
  box-sizing: border-box;
  width: 818px;
  left: 347px;
}

.form-margin-bottom {
  margin-bottom: 35px !important;
}

.form-label {
  font-style: normal;
  font-weight: 600;
  font-size: 20px;
  line-height: 24px;
  display: flex;
  align-items: center;
  text-align: center;
  margin-bottom: 0px !important;
  padding-bottom: 14px;
}

.form-control {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 14px 16px;
  gap: 8px;
  font-style: normal;
  font-weight: 400 !important;
  font-size: 16px !important;
  line-height: 20px;
  width: 707px;
  height: 48px;
}

.form-select {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 14px 16px;
  gap: 8px;
  font-style: normal;
  font-weight: 400 !important;
  font-size: 16px !important;
  line-height: 20px;
  width: 707px;
  height: 48px;
}

.invalid {
  border: 1px solid red !important;
}

.unverified-postcode-disabled {
  background-color: rgb(238, 238, 238) !important;
}
.btn-outline-danger {
  margin-top: 14px !important;
  padding: 12.5px 24px !important;
}

#cancel-btn {
  padding: 5px 10px;
  margin-top: 14px;
  border: none;
  border-radius: 5px;
  background-color: #c94b4b;
  color: #fff;
  font-size: 12px;
  cursor: pointer;
}

.address-btn {
  padding: 5px 10px;
  margin: 5px;
  border: none;
  border-radius: 5px;
  background-color: #72b6e6;
  color: #fff;
  font-size: 14px;
  cursor: pointer;
}

.btn-secondary {
  background: #e9ecef !important;
  color: black !important;
  border-color: #e9ecef !important;
  padding: 10px 16px !important;
  margin-top: 1rem;
}

.alert-heading {
  font-weight: bold;
}

.unVerifiedPostcode {
  background-color: #4caf50;
}

.verifiedPostcode {
  color: #fff;
  background-color: #000000;
}

#postcodePicker {
  display: flex;
  justify-content: 'center';
  align-items: 'center';
  flex-direction: row;
}
/* ... */

